# uspdcp

./: Makefile  Makefile.config  README.BuildSystem  README.MakefileTemplate  README.txt  SEC_User_Space_Driver_Release_Notes.txt  mixed_mode_descriptors.patch
of/: Makefile.am
of/include/: compat.h  conf.h  of.h
of/src/: of.c  of.sh
sec-driver/: Makefile.am  README.txt  README_INTERNAL_FSL_ONLY.txt
sec-driver/deliverables/: sec_us_driver_drop_v_2_0.tgz  sec_us_driver_v0.tgz  sec_us_driver_v1.tgz  sec_us_driver_v2.tgz  sec_us_driver_v2_for_review.tgz
sec-driver/docs/: readme.txt  sec_doxy_file
sec-driver/include/: a.h  alu_mem_management.h  compat.h  external_mem_management.h  fsl_sec.h  fsl_sec_config.h
sec-driver/src/: a.c  fifo.h  list.c  list.h  sec_atomic.h  sec_config.c  sec_config.h  sec_contexts.c  sec_contexts.h  sec_driver.c  sec_hw_specific.c  sec_hw_specific.h  sec_internal.h  sec_job_ring.c  sec_job_ring.h  sec_pdcp.c  sec_pdcp.h  sec_rlc.c  sec_rlc.h  sec_sg_contexts.c  sec_sg_contexts.h  sec_sg_utils.c  sec_sg_utils.h  sec_utils.h
sec-driver/tests/system-tests/common/: common.h
sec-driver/tests/system-tests/sec_benchmark_binaries/1_drb/: out_1_th_1_drb.txt  out_1_th_1_drb_sec_poll.txt  out_1_th_1_drb_sec_process_packet.txt  out_2_th_1_drb.txt  out_2_th_1_drb_sec_poll.txt  out_2_th_1_drb_sec_process_packet.txt  test_sec_driver_benchmark  test_sec_driver_benchmark_single_th
sec-driver/tests/system-tests/sec_benchmark_binaries/256_drb/: out_1_th_256_drb.txt  out_1_th_256_drb_null_algo.txt  out_1_th_256_drb_null_algo_sec_poll.txt  out_1_th_256_drb_null_algo_sec_process_packet.txt  out_1_th_256_drb_sec_poll.txt  out_1_th_256_drb_sec_process_packet.txt  out_2_th_256_drb.txt  out_2_th_256_drb_sec_poll.txt  out_2_th_256_drb_sec_process_packet.txt  test_sec_driver_benchmark  test_sec_driver_benchmark_single_th
sec-driver/tests/system-tests/test-scenario-1/: Makefile.am  readme.txt  test.c  test_sec_driver_poll.c  test_sec_driver_poll.h  test_sec_driver_poll.sh  test_sec_driver_poll_test_vectors.h
sec-driver/tests/system-tests/test-scenario-b2b/: Makefile.am  readme.txt  test_sec_driver_b2b.c  test_sec_driver_b2b.h
sec-driver/tests/system-tests/test-scenario-benchmark/: Makefile.am  readme.txt  test_sec_driver_benchmark.c  test_sec_driver_benchmark.h
sec-driver/tests/system-tests/test-scenario-benchmark-sg/: Makefile.am  readme.txt  test_sec_driver_benchmark_sg.c  test_sec_driver_benchmark_sg.h
sec-driver/tests/system-tests/test-scenario-benchmark-single-th/: Makefile.am  readme.txt  test_sec_driver_benchmark_single_th.c  test_sec_driver_benchmark_single_th.h
sec-driver/tests/system-tests/test-scenario-benchmark-single-th-sg/: Makefile.am  readme.txt  test_sec_driver_benchmark_single_th_sg.c  test_sec_driver_benchmark_single_th_sg.h
sec-driver/tests/system-tests/test-scenario-benchmark/core-cycles-measurements-25-may/: out_2_th_1_user.txt  out_2_th_512_user.txt  out_2_th_512_user_sec_poll_job_ring.txt  out_2_th_512_user_sec_process_packet.txt  out_sg_512.txt  out_sg_512_sec_poll.txt  out_sg_512_sec_process_packet.txt
sec-driver/tests/system-tests/test-scenario-benchmark/core-cycles-measurements-draft/: out_poll_1_pkt_once.txt  out_poll_5_pkt_once.txt  out_poll_all_packets.txt  out_poll_all_packets_1002_byte_pkt.txt  out_poll_all_packets_1002_byte_pkt_1_ctx_burst_eq_2_pkt.txt  out_poll_all_packets_1002_byte_pkt_256_ctx.txt  out_poll_all_packets_1002_byte_pkt_256_ctx_burst_eq_2_pkt.txt
sec-driver/tests/system-tests/test-scenario-poll/: test_sec_driver_poll.c  test_sec_driver_poll.h
sec-driver/tests/system-tests/test-scenario-poll-irq-napi/: Makefile.am  readme.txt  test_sec_driver.c  test_sec_driver.h  test_sec_driver_test_vectors.h
sec-driver/tests/system-tests/test-scenario-poll-irq-napi-wcdma/: Makefile.am  readme.txt  test_sec_driver_wcdma.c  test_sec_driver_wcdma.h  test_sec_driver_wcdma_test_vectors.h
sec-driver/tests/unit-tests/api_tests/: Makefile.am  api_tests.c
sec-driver/tests/unit-tests/contexts-pool-tests/: Makefile.am  contexts-pool-tests.c
sec-driver/tests/unit-tests/hfn-override-tests/: Makefile.am  hfn_override_tests.c  hfn_override_tests.h
sec-driver/tests/unit-tests/list-tests/: Makefile.am  list-tests.c
sec-driver/tests/unit-tests/mixed-descs-tests/: Makefile.am  mixed_descs_tests.c  mixed_descs_tests.h
sec-driver/tests/unit-tests/uio-notify-tests/: Makefile.am  uio-notify-tests.c
utils/dma_mem/: Makefile.am  README.txt  create_dev.sh
utils/dma_mem/include/: compat.h  conf.h  dma_mem.h
utils/dma_mem/src/: allocator.c  fsl_usmmgr.c  lg_shm.c  private.h  setup.c
utils/dma_mem/test/: Makefile.am  test_dma_mem.c
utils/of/: Makefile.am  of.sh
utils/of/include/: compat_of.h  of.h
utils/of/src/: of.c
utils/test-frameworks/cgreen/: Makefile.am  assertions.c  assertions.h  cgreen.h  exceptions.hpp  makefile  messaging.c  messaging.h  mocks.c  mocks.h  unit.c  unit.h  vector.c
utils/test-frameworks/cgreen/samples/: makefile  order.c
utils/test-frameworks/cgreen/tests/: Makefile.am  all_tests.c  exceptions_tests.cpp  makefile  vector_tests.c
